--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -35,14 +35,24 @@
                 "    - [Data preparation](#data-preparation)\n",
                 "        - [Feature and Targer separation](#feature-and-targer-separation)\n",
                 "        - [Standard Scaling](#standard-scaling)\n",
-                "    - [Logistic Regression Model](#logistic-regression-model)\n",
-                "        - [Logistic Regression Model training](#logistic-regression-model-training)\n",
-                "        - [Logistic Regression Model evaluation](#logistic-regression-model-evaluation)\n",
-                "        - [Logistic Regression Model results sumary and conclusion](#logistic-regression-model-results-sumary-and-conclusion)\n",
-                "    - [Logistic Regression Model II](#logistic-regression-model-ii)\n",
-                "        - [Logistic Regression Model II retraining](#logistic-regression-model-ii-retraining)\n",
-                "        - [Logistic Regression Model II evaluation](#logistic-regression-model-ii-evaluation)\n",
-                "        - [Logistic Regression Model II results sumary and conclusion](#logistic-regression-model-ii-results-sumary-and-conclusion)"
+                "    - [Logistic Regression Models](#logistic-regression-models)\n",
+                "        - [Logistic Regression Model I](#logistic-regression-model-i)\n",
+                "            - [Logistic Regression Model I training](#logistic-regression-model-i-training)\n",
+                "            - [Logistic Regression Model I evaluation](#logistic-regression-model-i-evaluation)\n",
+                "            - [Logistic Regression Model I results sumary and conclusion](#logistic-regression-model-i-results-sumary-and-conclusion)\n",
+                "        - [Logistic Regression Model II](#logistic-regression-model-ii)\n",
+                "            - [Logistic Regression Model II retraining](#logistic-regression-model-ii-retraining)\n",
+                "            - [Logistic Regression Model II evaluation](#logistic-regression-model-ii-evaluation)\n",
+                "            - [Logistic Regression Model II results sumary and conclusion](#logistic-regression-model-ii-results-sumary-and-conclusion)\n",
+                "    - [Tree Based Models](#tree-based-models)\n",
+                "        - [Random Forest Classifier](#random-forest-classifier)\n",
+                "            - [Random Forest Classifier training](#random-forest-classifier-training)\n",
+                "            - [Random Forest Classifier evaluation](#random-forest-classifier-evaluation)\n",
+                "            - [Random Forest Classifier results sumary and conclusion](#random-forest-classifier-results-sumary-and-conclusion)\n",
+                "        - [LightGBM Model](#lightgbm-model)\n",
+                "            - [LightGBM Model training](#lightgbm-model-training)\n",
+                "            - [LightGBM Model evaluation](#lightgbm-model-evaluation)\n",
+                "            - [LightGBM Model results sumary and conclusion](#lightgbm-model-results-sumary-and-conclusion)"
             ]
         },
         {
@@ -2974,7 +2984,15 @@
                 "        - [Logistic Regression Model II retraining](#logistic-regression-model-ii-retraining)\n",
                 "        - [Logistic Regression Model II evaluation](#logistic-regression-model-ii-evaluation)\n",
                 "        - [Logistic Regression Model II results sumary and conclusion](#logistic-regression-model-ii-results-sumary-and-conclusion)\n",
-                "4. [Tree Based Models](#tree-based-models)"
+                "4. [Tree Based Models](#tree-based-models)\n",
+                "    - [Random Forest Classifier](#random-forest-classifier)\n",
+                "        - [Random Forest Classifier training](#random-forest-classifier-training)\n",
+                "        - [Random Forest Classifier evaluation](#random-forest-classifier-evaluation)\n",
+                "        - [Random Forest Classifier results sumary and conclusion](#random-forest-classifier-results-sumary-and-conclusion)\n",
+                "    - [LightGBM Model](#lightgbm-model)\n",
+                "        - [LightGBM Model training](#lightgbm-model-training)\n",
+                "        - [LightGBM Model evaluation](#lightgbm-model-evaluation)\n",
+                "        - [LightGBM Model results sumary and conclusion](#lightgbm-model-results-sumary-and-conclusion)"
             ]
         },
         {
@@ -3074,7 +3092,7 @@
             "source": [
                 "##### Logistic Regression Model I training\n",
                 "- Back to [Model Deployment](#model-deployment)\n",
-                "- Back to [Logistic Regression Models](#logistic-regression-model)"
+                "- Back to [Logistic Regression Model I](#logistic-regression-model-i)"
             ]
         },
         {
@@ -3522,9 +3540,9 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "##### Logistic Regression Model evaluation\n",
+                "##### Logistic Regression Model I evaluation\n",
                 "- Back to [Model Deployment](#model-deployment)\n",
-                "- Back to [Logistic Regression Models](#logistic-regression-models)"
+                "- Back to [Logistic Regression Model I](#logistic-regression-model-i)"
             ]
         },
         {
