app.py done and tested

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -52,7 +52,10 @@
                 "        - [LightGBM Model](#lightgbm-model)\n",
                 "            - [LightGBM Model training](#lightgbm-model-training)\n",
                 "            - [LightGBM Model evaluation](#lightgbm-model-evaluation)\n",
-                "            - [LightGBM Model results sumary and conclusion](#lightgbm-model-results-sumary-and-conclusion)"
+                "            - [LightGBM Model results sumary and conclusion](#lightgbm-model-results-sumary-and-conclusion)\n",
+                "8. [Saving Chosen Model](#saving-chosen-model)\n",
+                "9. [Saving Scaler](#saving-scaler)\n",
+                "10. [Saving Features](#saving-features)"
             ]
         },
         {
@@ -5349,10 +5352,10 @@
                 "\n",
                 "| Metric         | Value   |\n",
                 "|----------------|---------|\n",
-                "| Accuracy       | 70%     |\n",
-                "| Precision (1)  | 31%     |\n",
-                "| Recall (1)     | 80%     |\n",
-                "| F1-score (1)   | 0.45    |\n",
+                "| Accuracy       | 85%     |\n",
+                "| Precision (1)  | 55%     |\n",
+                "| Recall (1)     | 25%     |\n",
+                "| F1-score (1)   | 0.35    |\n",
                 "| ROC AUC        | 0.82    |\n",
                 "\n",
                 "- Highest recall of all models tested — critical in health screening scenarios\n",
@@ -5392,7 +5395,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 58,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -5404,8 +5407,52 @@
                 }
             ],
             "source": [
-                "import os\n",
                 "print(\"Pickle file size (MB):\", os.path.getsize(\"../models/lightgbm_model.lgb\") / (1024 * 1024))"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Saving Scaler\n",
+                "Back to [Index](#index)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 59,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import pickle\n",
+                "\n",
+                "with open(\"../data/processed/standard_scaler.pkl\", \"wb\") as f:\n",
+                "    pickle.dump(scaler, f)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Saving Features\n",
+                "Back to [Index](#index)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 60,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "feature_list = [\n",
+                "    \"HighBP\", \"HighChol\", \"CholCheck\", \"Smoker\", \"Stroke\", \"HeartDiseaseorAttack\",\n",
+                "    \"PhysActivity\", \"Fruits\", \"Veggies\", \"HvyAlcoholConsump\", \"AnyHealthcare\",\n",
+                "    \"NoDocbcCost\", \"DiffWalk\", \"Sex\", \"BMI\", \"GenHlth\", \"Age\",\n",
+                "    \"Education\", \"Income\", \"MentHlth_Bin\", \"PhysHlth_Bin\"\n",
+                "]\n",
+                "\n",
+                "with open(\"../data/processed/feature_list.pkl\", \"wb\") as f:\n",
+                "    pickle.dump(feature_list, f)"
             ]
         }
     ],
